--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -2,6 +2,7 @@ html, body, #app {
     height: 100%;
     margin: 0;
     padding: 0;
+    min-width: 1366px;
 }
 
 .el-breadcrumb {
@@ -11,4 +12,9 @@ html, body, #app {
 
 .el-card {
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15) !important;
+}
+
+.el-table {
+    margin-top: 15px;
+    font-size: 12px;
 }
